# CustomerFrontend/src/app/api/models/basket-dto.ts
@@ -4,4 +4,6 @@ export interface BasketDto {
   amount?: null | string;
   item?: null | string;
   price?: null | string;
+  productId?: number;
+  status?: null | string;
 }
