# CustomerFrontend/src/app/api/models/basket.ts
@@ -2,9 +2,10 @@
 /* eslint-disable */
 export interface Basket {
   amount?: null | string;
-  id?: number;
   item?: null | string;
   orderTime?: string;
   price?: null | string;
+  productId?: number;
+  status?: null | string;
   tableNumber?: null | string;
 }
